metadata/objects/HerokuApp__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>AppId__c</fullName>
        <label>App Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartPage__c</fullName>
        <label>Start Page</label>
        <length>124</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>access_token__c</fullName>
        <label>access_token</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expires_in__c</fullName>
        <label>expires_in</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>refresh_token__c</fullName>
        <label>refresh_token</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>session_nonce__c</fullName>
        <label>session_nonce</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>token_type__c</fullName>
        <label>token_type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_id__c</fullName>
        <label>user_id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>HeorkuApp</label>
</CustomObject>